Problem Description revised.

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -88,6 +88,15 @@
 }
 
 
+@article{bo-shadow,
+  title={Cooperation under the shadow of the future: experimental evidence from infinitely repeated games},
+  author={B{\'o}, Pedro Dal},
+  journal={American Economic Review},
+  pages={1591--1604},
+  year={2005},
+  publisher={JSTOR}
+}
+
 @article{jansen-torincentive,
   title={From onions to shallots: Rewarding Tor relays with TEARS},
   author={Jansen, Rob and Miller, Andrew and Syverson, Paul and Ford, Bryan},
