--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -71,5 +71,5 @@ Chapter 2 gives a description of what the problem is of collaboration in peer-to
 Chapter 3 provides an overview of related work of different approaches in solving the problem.
 The design and implemention of the thesis work is described in chapter 4.
 The implementation is tested and the experiments and results are described in chapter 5.
-THe design has known vulnerabillities and these are explained in chapter 6.
+The design has known vulnerabillities and these are explained in chapter 6.
 Finally, we discuss the results of the work in chapter 7.
