--- a/relatedWork/bartercast.tex
+++ b/relatedWork/bartercast.tex
@@ -1,5 +1,6 @@
 \section{BarterCast}
-BarterCast is the system used by Tribler to keep track of reputations\cite{pouwelse-buddycast}\cite{meulpolder-bartercast}\cite{meulpolder-bartercast-paper}\cite{dumitrescu-tribler}.
+BarterCast is the system used by Tribler to incentivise good behaviour by keeping track of reputations
+\cite{pouwelse-buddycast}\cite{meulpolder-bartercast}\cite{meulpolder-bartercast-paper}\cite{dumitrescu-tribler}.
 It is fully decentralized in contrast to previous reputation systems in a peer-to-peer network.
 Private BitTorrent communities for example depend on central servers track reputations\cite{meulpolder-bartercast}.
 BarterCast was not designed with the aim to be fully resistant to malicious nodes
@@ -75,7 +76,7 @@ The second circle contains peers that peers from the first circle has direct int
 
 \begin{figure}
 	\centerline{\includegraphics[width=0.8\textwidth]{relatedWork/figs/barterBrowser.eps}}
-	\caption{A screenshot of BarterBrowser\cite{pouwelse-buddycast}.}
+	\caption{A screenshot of BarterBrowser in 2008\cite{pouwelse-buddycast}.}
 	\label{fig:barterbrowser}
 \end{figure}
 
