--- a/design/community.tex
+++ b/design/community.tex
@@ -1,4 +1,4 @@
-\section{Community within Tribler}
+\section{MultiChain Community}
 Tribler uses communities to add functionalities to peers.
 A peer loads in a community and this community provides a set of messages and endpoints for other peers.
 The community can communicate with the endpoints of other peers as well and send a message to these endpoint.
@@ -6,3 +6,7 @@ Other peers are automatically discovered using Dispersy.
 Examples of a community are the TunnelCommunity that adds functionality to download anonymously\cite{Plak-anonymous}
 or the AllChannelCommunity to distribute torrent files.
 The designed system will be implemented by adding a new community to Tribler.
+
+The MultiChain community can be run standalone,
+but its main use is to integrate with Tribler and track up and download for torrents.
+It will replace the current reputation system Bartercast in the future.
