--- a/design/scalable-reciprocity.tex
+++ b/design/scalable-reciprocity.tex
@@ -1,7 +1,8 @@
-\section{Abandoning full transaction history distribution}
+\subsection{Scalable reciprocity}
+\label{sect:scalable-reciprocity}
 One of the main pillars of the design is to have a transaction history for every peer.
 This is in contrast to not distribute a common, full transaction history containing the transactions of every peer.
-For example used in the design of the blockchain of Bitcoins, discussed in section \ref{sect:bitcoin}.
+For example, used in the design of the blockchain of Bitcoins, discussed in section \ref{sect:bitcoin}.
 The reasoning behind the idea to abandon is that a common, full truth
 will become the bottleneck in the system.
 This will limit the amount of interactions that can be processed
@@ -15,7 +16,9 @@ The amount of these three resources is limited and will limit the amount of tran
 This problem can be seen to affect Bitcoins and has been demonstrated in section \ref{bitcoin-limit-size}.
 
 Every node has its own transaction history and only needs the transaction history of its peers it interacts with.
+Within MultiChain peers can try to congregrate the full transaction history or only a subse.t
+The flexibility provides MultiChain with unbounded scalability.
 The amount of bandwidth, compute power and storage is limited to the minimal needed amount
 that is needed to process only the relevant transactions.
-This should allow low-powered devices to keep participating when they only have a low volume of transactions.
+This will allow low-powered devices to keep participating when they only have a low volume of transactions.
 It also allows higher volumes of transactions in the system as a whole.
