Fixed references to figures to use Figure.

--- a/experimentation/deadlock/deadlock.tex
+++ b/experimentation/deadlock/deadlock.tex
@@ -23,7 +23,7 @@ Only three instances of MultiChain communities are started.
 One of these instances never respond to a request to construct a block.
 The logging of the every node is captured and recorded to verify the results of the experiment.
 
-The output of the logging can be seen in figure \ref{fig:manual-deadlock-experiment}.
+The output of the logging can be seen in Figure \ref{fig:manual-deadlock-experiment}.
 First node 1 sends a signature request to node 2.
 This message is ignored by node 2.
 During the waiting period of node 1 a block request is sent to node 1 by node 3.
