--- a/experimentation/singlerequest/singlerequest.tex
+++ b/experimentation/singlerequest/singlerequest.tex
@@ -5,7 +5,7 @@ The experiment is locally run using gumby with all nodes running on a single com
 Only two instances of MultiChain communities are started and between these two communities a block is created.
 The logging of the both nodes is captured and recorded to verify the results of the experiment.
 
-The output of the logging can be seen in figure \ref{fig:singleblockexperiment}.
+The output of the logging can be seen in Figure \ref{fig:singleblockexperiment}.
 First node 1 sends a signature request to node 2.
 This message is received and a block is persisted.
 The hash of the block is displayed in the output.
