--- a/graduationdata.tex
+++ b/graduationdata.tex
@@ -8,7 +8,7 @@ Steffan D. Norberhuis\\
 \end{tabular}\\
 \noindent \textbf{Title}\\
 \begin{tabular}{l}
-DoubleEntry: Tamper-proof Interaction History\\
+MultiChain: an incremental step in a new distributed data structure\\
 \\
 \end{tabular}\\
 \noindent \textbf{MSc presentation}\\
@@ -28,7 +28,8 @@ DoubleEntry: Tamper-proof Interaction History\\
 %prof. dr. ir. H. J. Sips (chair) & Delft University of Technology \\
 %ir. dr. D. H. J. Epema           & Delft University of Technology \\
 Prof. dr. ir. H. J. Sips            & Delft University Of Technology \\
-Prof. dr. ir. J. A. Pouwelse        & Delft University of Technology \\
+dr. ir. J. A. Pouwelse        & Delft University of Technology \\
+dr. ir. Z. Erkin              & Delft University of Technology \\
 \end{tabular}
 
 \begin{abstract} %de abstract bevat alleen een korte samenvatting van de inhoud van het onderzoek
