--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -7,7 +7,7 @@ and make it impossible to shut the infrastructure of the Internet down.
 A fully distributed program, not relying on any central component, is needed to achieve this.
 Tribler has been designed and build using this methodology\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
 A distributed network requires collaboration of it peers to achieve success.
-A schreenshot of Tribler can be seen in figure \ref{fig:tribler-schreenshot}
+A schreenshot of Tribler can be seen in Figure \ref{fig:tribler-schreenshot}
 This master thesis was conducted as part of the research mission to improve the collaboration within Tribler.
 
 \begin{figure}
