--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -30,7 +30,7 @@ The utility received can be seen in Table \ref{tab:pd-um}.
 This dilemma can be repeated several times with the same nodes and is the Iterated Prisoner's Dilemma.
 Each time both nodes will have to decide if it will help the other node.
 The nodes receive direct reciprocity from the other node\cite{Nowak-Cooperation}.
-Direct reciprocity is displayed abstractly in figure \ref{fig:direct-reciprocity}.
+Direct reciprocity is displayed abstractly in Figure \ref{fig:direct-reciprocity}.
 Node A helps node B and in returns receives help.
 
 \begin{table}
@@ -99,7 +99,7 @@ and is able to achieve high overall utility\cite{Lai-Incentives}.
 This public history contains every previous interaction.
 The nodes now receive indirect reciprocity\cite{Nowak-Cooperation}.
 By helping nodes they will receive help from other nodes in the future based upon their good behaviour.
-Indirect reciprocity is displayed abstractly in figure \ref{fig:indirect-reciprocity}.
+Indirect reciprocity is displayed abstractly in Figure \ref{fig:indirect-reciprocity}.
 The help of node C to node A is dependend on node A helping node B.
 
 \begin{figure}
@@ -130,7 +130,7 @@ The interaction history has to be distributable in an efficient manner.
 Only if it meets these constraints, will an interaction history be usable in a distributed system.
 The network has to achieve network reciprocity\cite{Nowak-Cooperation}.
 Helping peers in the network will ensure that peers themselves receive help.
-This is displayed abstractly in figure \ref{fig:network-reciprocity}.
+This is displayed abstractly in Figure \ref{fig:network-reciprocity}.
 
 \begin{figure}
 	\centerline{\includegraphics[scale=0.3]{problemDescription/figs/network-reciprocity.eps}}
